# lmms-rs

./: .gitattributes  Cargo.toml  README.md
core/: Cargo.toml
core/src/: data.rs  engine.rs  lib.rs  util.rs
data/locale/: ar.qm  ar.ts  bs.qm  bs.ts  ca.qm  ca.ts  cs.qm  cs.ts  de.qm  de.ts  el.qm  el.ts  en.ts  eo.qm  eo.ts  es.qm  es.ts  eu.qm  eu.ts  fa.qm  fa.ts  fr.qm  fr.ts  gl.qm  gl.ts  he.qm  he.ts  hi_IN.qm  hi_IN.ts  hu_HU.qm  hu_HU.ts  id.qm  id.ts  it.qm  it.ts  ja.qm  ja.ts  ka.qm  ka.ts  ko.qm  (+31 more)
data/presets/AudioFileProcessor/: Bass-Mania.xpf  Erazor.xpf  Fat-Reversed-Kick.xpf  Kick-4-your-Subwoofer.xpf  SString.xpf  orion.xpf
data/presets/BitInvader/: alien_strings.xpf  beehive.xpf  bell.xpf  cello.xpf  drama.xpf  epiano.xpf  invaders_must_die.xpf  pluck.xpf  soft_pad.xpf  spacefx.xpf  subbass.xpf  sweep_pad.xpf  toy_piano.xpf  wah_synth.xpf
data/presets/Kicker/: Clap dry.xpf  Clap.xpf  HihatClosed.xpf  HihatOpen.xpf  KickPower.xpf  Shaker.xpf  SnareLong.xpf  SnareMarch.xpf  TR909-RimShot.xpf  TrapKick.xpf
data/presets/LB302/: AcidLead.xpf  AngryLead.xpf  DroneArp.xpf  GoodOldTimes.xpf  Oh Synth.xpf  STrash.xpf
data/presets/Monstro/: Growl.xpf  HorrorLead.xpf  Phat.xpf  ScaryBell.xpf
data/presets/Nescaline/: Chomp.xpf  Detune_lead.xpf  Engine_overheats.xpf  Fireball_flick.xpf  Mega_weapon.xpf
data/presets/OpulenZ/: Bagpipe.xpf  Bells.xpf  Brass.xpf  Bubbly_days.xpf  Epiano.xpf  (+10 more)
gui/: Cargo.toml  build.rs
gui/src/: consts.rs  gui.rs  main.rs
gui/src/gui/: sixtyfps.rs
gui/ui/sixtyfps/: main.60
src/: gui.rs  main.rs
src/gui/: qt.rs
(+1140 files in other folders)
