[package]
name = "lmms-rs"
version = "1.3.0"
edition = "2021"
rust-version = "1.56.0"
license = "GPL-2.0-or-later"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["gui_sixtyfps"]
gui_sixtyfps = ["sixtyfps", "sixtyfps-build"]

[dependencies]
sixtyfps = {version = "0.1.5", optional = true}

[build-dependencies]
sixtyfps-build = {version = "0.1.5", optional = true}
